# memkeeper

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  glama.json  install.sh  schema-v0.1.sql  server.json
.github/workflows/: ci.yml  cla.yml  ghcr.yml  release.yml
adapters/mcp/: README.md  memkeeper_mcp.py  pyproject.toml  test_memkeeper_mcp.py
adapters/pi-extension/: README.md  index.ts  package.json  transport.mjs
adapters/pi-extension/test/: binary-resolution.test.mjs  transport.test.mjs
crates/memkeeper-cli/: Cargo.toml
crates/memkeeper-cli/src/: dashboard.rs  hook.rs  json.rs  main.rs  mcp.rs  output.rs  requests.rs  schema.rs  serve.rs  tests.rs
crates/memkeeper-cli/src/dashboard/: app.js  index.html  style.css
crates/memkeeper-cli/tests/: embed_integration.rs  init_stats.rs
crates/memkeeper-core/: Cargo.toml
crates/memkeeper-core/src/: lib.rs
crates/memkeeper-embed/: Cargo.toml
crates/memkeeper-embed/src/: api.rs  colbert.rs  lib.rs  metrics.rs
crates/memkeeper-protocol/: Cargo.toml
crates/memkeeper-protocol/src/: lib.rs
crates/memkeeper-store/: Cargo.toml  bench_oracle_baseline.json
crates/memkeeper-store/src/: archive_spec.rs  common.rs  connection.rs  dream.rs  graph.rs  lib.rs  recall.rs  representation.rs  schema.rs  spaces.rs  stats.rs  tests.rs  types.rs
crates/memkeeper-store/tests/: acceptance.rs  bench_oracle.rs  pack_budget_oracle.rs
docs/: CLA.md  benchmarks.md  dev-setup.md  operations.md  windows.md
scripts/: fetch-models.sh  mcpfmt  memkeeper_locomo_benchmark.py  memkeeper_serve_latency_benchmark.py  mkfmt  package-smithery-mcpb.sh
smithery/: README.md
tools/reranker/: README.md  build_dataset.py  evaluate.py  export_onnx.py  requirements.txt  train.py
