[project]
name = "memkeeper-mcp"
version = "0.1.0"
description = "MCP bridge exposing a local memkeeper store to MCP-capable agents (Claude Code, Cursor, ...)"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT OR Apache-2.0"
keywords = ["memory", "mcp", "local-first", "ai", "memkeeper"]
dependencies = [
    "mcp>=1.0",
]

[project.optional-dependencies]
test = ["pytest>=7"]

[project.scripts]
memkeeper-mcp = "memkeeper_mcp:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Single-module package: ship the bridge script directly.
include = ["memkeeper_mcp.py"]
