[package]
name = "memkeeper-embed"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
ort = { version = "2.0.0-rc.12", features = ["download-binaries", "ndarray"], optional = true }
tokenizers = { version = "0.19", default-features = false, features = ["onig"], optional = true }
ndarray = { version = "0.17", optional = true }
anyhow = "1"
ureq = { version = "2", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[features]
default = []
local = ["dep:ort", "dep:tokenizers", "dep:ndarray", "dep:serde", "dep:serde_json"]
api = ["dep:ureq", "dep:serde", "dep:serde_json"]

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
