[package]
name = "memkeeper-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
memkeeper-core = { path = "../memkeeper-core" }
rusqlite = { version = "0.39.0", features = ["bundled", "backup"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlite-vec = { version = "=0.1.9", optional = true }

[features]
default = []
semantic = ["sqlite-vec"]

[lints.rust]
unsafe_code = "allow"
missing_docs = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
